--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,6 +33,11 @@ en:
       Once that's done, go to your Bonnaroo profile and edit the
       section that says Profile Link. Then add your Profile Link here.
     profile_example: 'Ex: just the "geoff" part in "http://lineup.bonnaroo.com/geoff/"'
+  issue:
+    instructions: "Got a bug? Feature request?"
+    title: "New Feedback"
+    link: "Click Here!"
+    submit: "Submit Feedback"
   misc:
     brand: "'Roo Pals"
     bonnaroo: "Bonnaroo 2014."
