--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -36,7 +36,7 @@ en:
   issue:
     instructions: "Got a bug? Feature request?"
     title: "New Feedback"
-    link: "Click Here!"
+    link: "Request Feedback"
     submit: "Submit Feedback"
   misc:
     brand: "'Roo Pals"
