Writes fairly basic form for following users

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -47,6 +47,9 @@ en:
     me: "Me"
   relationship:
     self_error: "You cannot follow yourself"
+    submit: "Follow"
+    header: "Follow Pals"
+    filter: "Filter Pals"
   session:
     header: "Greetings, 'Roovians!"
     log_out: "Log Out"
